Fixed alignment with mobile nav.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -37,17 +37,16 @@ html {
   cursor: pointer;
   position: relative;
   z-index: 9999;
-  padding: 1em;
-  margin-top: 0.7em;
 }
 
-.burger-menu .bar1,
+.bar1,
 .bar2,
 .bar3 {
   width: 25px;
-  height: 3px;
+  min-height: 3px;
+  max-height: 3px;
   background-color: #375279;
-  border-radius: 5px;
+  border-radius: 4px;
   margin: 0.25em 0;
   transition: 0.4s;
 }
